--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.335.0",
+    "@prisma/client": "^4.14.1",
     "@supabase/supabase-js": "^2.22.0",
     "aws-sdk": "^2.729.0",
     "dotenv": "^16.0.3",
     "elevenlabs-node": "^1.0.2",
     "next": "13.4.3",
     "node-fetch": "^3.3.1",
+    "prisma": "^4.14.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "supabase": "^1.62.3"
