--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prisma": "^4.14.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "supabase": "^1.62.3"
   },
   "devDependencies": {
