--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "aws-sdk": "^2.729.0",
     "dotenv": "^16.0.3",
     "elevenlabs-node": "^1.0.2",
+    "got-scraping": "^3.2.13",
     "next": "13.4.3",
     "node-fetch": "^3.3.1",
+    "open-graph-scraper": "^6.0.1",
     "prisma": "^4.14.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
