--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.335.0",
+    "@emotion/react": "^11.11.0",
+    "@emotion/server": "^11.11.0",
+    "@mantine/core": "^6.0.11",
+    "@mantine/hooks": "^6.0.11",
+    "@mantine/next": "^6.0.11",
     "@prisma/client": "^4.14.1",
     "@supabase/supabase-js": "^2.22.0",
     "aws-sdk": "^2.729.0",
@@ -20,6 +25,7 @@
     "next": "13.4.3",
     "node-fetch": "^3.3.1",
     "open-graph-scraper": "^6.0.1",
+    "openai": "^3.2.1",
     "prisma": "^4.14.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -36,5 +42,8 @@
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
     "typescript": "5.0.4"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
